# big-brother

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: main.css
migrations/: 20241221154720_create_tracking_table.sql  20250111084218_create_discord_table.sql
nix/: module.nix  package.nix
src/: database.rs  discord.rs  github.rs  main.rs  web.rs
templates/: index.html  pr.html
