[package]
name = "big-brother"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.42.0", features = ["full", "macros", "tokio-macros"] }
