[package]
name = "big-brother"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
askama = "0.13"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.42", features = ["full", "macros", "tokio-macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
thiserror = "2.0.12"
futures = "0.3.31"
